--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my first github repo</title>
 </head>
 <body>
-    
+    <h1>mama code pathamu!</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, illo.</p>
+
 </body>
 </html>
