--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>mama code pathamu!</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, illo.</p>
+    <img src="img/tree-736885_640.jpg" alt="tree">
 
 </body>
 </html>
